--- a/notebooks/Rasters.ipynb
+++ b/notebooks/Rasters.ipynb
@@ -18,6 +18,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "27f5aaf1-71d3-4337-825e-289e2257e694",
+   "metadata": {},
+   "source": [
+    "## Before we start\n",
+    "\n",
+    "<div class=\"warning\" style='padding:0.1em; background-color:#E9D8FD; color:#69337A'>\n",
+    "<span>\n",
+    "<p style='margin-top:1em;margin-left:1em'>\n",
+    "<b>Step 1: change the Python kernel</b></p>\n",
+    "<p style='margin-left:1em;'>\n",
+    "Make sure in the top right of this window the selected kernel is `geo-kernel (ipykernel)`. If you see `Python 3 (ipykernel)`, just click on it to change it to the `geo-kernel`.\n",
+    "</p>\n",
+    "</span>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7ed8a42e-2c4e-468c-b58f-53dfab3595d1",
    "metadata": {},
    "source": [
@@ -40,7 +58,7 @@
     "%matplotlib inline\n",
     "\n",
     "# Data dir\n",
-    "data_dir = \"../data/Beeldmateriaal/\"\n",
+    "data_dir = \"../data/input_data/\"\n",
     "fp = os.path.join(data_dir, \"USP_4Band_RGBN.tif\")\n",
     "\n",
     "# Open the file:\n",
@@ -490,7 +508,7 @@
    "source": [
     "import numpy as np\n",
     "import xarray\n",
-    ".\n",
+    "\n",
     "# Defines the bins for pixel values\n",
     "class_bins = (-1, -0.2, 0.2, 0.5, 1)\n",
     "\n",
