--- a/playbooks/roles/geospatial/files/notebooks/Intro_Jupyter.ipynb
+++ b/playbooks/roles/geospatial/files/notebooks/Intro_Jupyter.ipynb
@@ -19,7 +19,11 @@
     "\n",
     "A Notebook consists of one or more \"cells\" in which you can put text and code. The text you are reading right now is placed in a `Markdown` cell. Click somewhere on this text _once_ and verify this at the top of this page.\n",
     "\n",
-    "The next cell is a `Code` cell. The current notebook uses a Python interpreter (check the top right corner to verify) which means it expects Python code and can only interpret Python code. Different setups are also possible (e.g. with an `R` or `Julia` interpreter). Select the following cell, verify at the top of this window if it displays `Code` instead of `Markdown`, and either click the 'play'-button above or press `<ctrl>-<enter>` simultaneously to run the Python code."
+    "The next cell is a `Code` cell. The current notebook uses a Python interpreter (check the top right corner to verify, it will display `Python 3 (ipykernel)`) which means it expects Python code and can only interpret Python code. Different setups are also possible (e.g. with an `R` or `Julia` interpreter). \n",
+    "\n",
+    "Click `Python 3 (ipykernel)`, and change the kernel to `geo-kernel`. This is a different Python interpreter where we preinstalled all Python packages that we need for this workshop.\n",
+    "\n",
+    "Select the following cell, verify at the top of this window if it displays `Code` instead of `Markdown`, and either click the 'play'-button above or press `<ctrl>-<enter>` simultaneously to run the Python code."
    ]
   },
   {
@@ -37,6 +41,8 @@
    "id": "6ea6a15e-0da3-4df3-926d-271236d1e551",
    "metadata": {},
    "source": [
+    "Check that the output is printed below the cell!\n",
+    "\n",
     "Markdown cells can contain a wide variety of things:\n",
     "\n",
     "- Headers\n",
@@ -115,7 +121,7 @@
    "id": "55bcac1c-296f-43ac-ba29-9c97907e1c7f",
    "metadata": {},
    "source": [
-    "A finished notebook should contain python code cells that can be run from the top to the bottom of the notebook. When your notebook becomes more complex, typically what happens is that because you have been running and changing and rerunning code cells while developing, the logic of your python code from top to bottom breaks, and to prevent this (or at least get notified in an early stage) it is good practice to regularly restart the Python 'kernel' and run all the cells from top to bottom (or up to the selected cell). Click the Kernel tab at the top of this window and verify if you see these options."
+    "A finished notebook should contain python code cells that can be run from the top to the bottom of the notebook. When your notebook becomes more complex, typically what happens is that because you have been running and changing and rerunning code cells while developing, the logic of your python code from top to bottom breaks. To prevent this (or at least get notified in an early stage) it is good practice to regularly restart the Python 'kernel' and run all the cells from top to bottom (or up to the selected cell). Click the Kernel tab at the top of this window and verify if you see these options, and click `Restart Kernel and Run up to Selected Cell`."
    ]
   },
   {
