--- a/playbooks/roles/geospatial/files/notebooks/Vectors.ipynb
+++ b/playbooks/roles/geospatial/files/notebooks/Vectors.ipynb
@@ -18,6 +18,23 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Before we start\n",
+    "\n",
+    "<div class=\"warning\" style='padding:0.1em; background-color:#E9D8FD; color:#69337A'>\n",
+    "<span>\n",
+    "<p style='margin-top:1em;margin-left:1em'>\n",
+    "<b>Step 1: change the Python kernel</b></p>\n",
+    "<p style='margin-left:1em;'>\n",
+    "Make sure in the top right of this window the selected kernel is `geo-kernel (ipykernel)`. If you see `Python 3 (ipykernel)`, just click on it to change it to the `geo-kernel`.\n",
+    "</p>\n",
+    "</span>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
@@ -64,7 +81,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -158,7 +174,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -279,7 +294,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -388,7 +402,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -493,7 +506,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1607,6 +1619,9 @@
    "source": [
     "# Create a output path for the data\n",
     "output_folder = r\"../data/output_data\"\n",
+    "if not os.path.exists(output_folder):\n",
+    "    os.makedirs(output_folder)\n",
+    "\n",
     "output_fp = os.path.join(output_folder, \"forest.shp\")"
    ]
   },
@@ -2100,7 +2115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
